--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="wrapper">
+    
         <header>
             <div class="hero-class">
                 <a href="#" class="hero-title">Music World</a>
@@ -43,12 +43,12 @@
         <section class="slide-categories">
             <div class="category-description">
                 <h1>Instrument Lessons</h1>
-                <p>It is never too late to learn...</p>
+                <h2>It is never too late to learn...</h2>
             </div>
             
             <div class="slide-icon">
-                <img src="images/slide-icon-left.svg" alt="Slide Left">
-                <img src="images/slide-icon-right.svg" alt="Slide Right">
+                <img src="images/slide-icon-right.svg" alt="Slide Left" class="slide-category-image-a">
+                <img src="images/slide-icon-right.svg" alt="Slide Right" class="slide-category-image-b">
             </div>
 
             <div class="slide-ellipse">
@@ -59,6 +59,9 @@
                 <img src="images/ellipse-light.svg" alt="Ellipse Light">
                 <img src="images/ellipse-light.svg" alt="Ellipse Light">
             </div>
+
+            <img src="images/slide-image.jpg" alt="Slide Image" class="slide-category-image">
+            <!--img src="images/piano.jfif" alt="Slide Image" class="slide-category-image"-->
         </section>
 
         <section class="about-us">
@@ -131,6 +134,6 @@
                 </div>
             </div>
         </section>
-    </div>
+
 </body>
 </html>
