Home page finished

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <div class="container">
         <header>
             <div class="hero-class">
                 <a href="#" class="hero-title">Music World</a>
@@ -60,7 +60,7 @@
                 <img src="images/ellipse-light.svg" alt="Ellipse Light">
             </div>
 
-            <img src="images/slide-image.jpg" alt="Slide Image" class="slide-category-image">
+            <img src="images/guitar-slide.jfif" alt="Slide Image" class="slide-category-image">
             <!--img src="images/piano.jfif" alt="Slide Image" class="slide-category-image"-->
         </section>
 
@@ -68,8 +68,15 @@
             <div class="about-us-content">
                 <h1>About Us</h1>
                 <h2>We want to bring you closer to music</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum nihil molestias, in, veritatis itaque quia error tempora quam iste quas ipsam temporibus asperiores minima hic quisquam magni inventore numquam illum? Facilis pariatur nam incidunt consequatur.</p>
-                <p>Read More</p>
+                <p class="paragraph">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Recusandae praesentium quasi architecto dolorum expedita dignissimos suscipit commodi inventore, 
+                    quibusdam facilis debitis ex perspiciatis magnam ut excepturi eligendi harum ratione voluptate cumque 
+                    voluptatibus neque esse. Modi?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Recusandae praesentium quasi architecto dolorum expedita dignissimos suscipit commodi inventore.
+                </p>
+                <p class="button">Read More</p>
             </div>
 
             <div class="about-us-image">
@@ -78,38 +85,39 @@
         </section>
 
         <section class="why-MW">
-            <img src="images/why-image.jpg" alt="Why MW">
-
             <div class="why-MW-reasons">
-                <h1>Why use Music World</h1>
+                <div class="why-title">
+                    <h1>Why use Music World</h1>
+                </div>
 
                 <ul class="reasons">
                     <li>
                         <h4>The best for every budget</h4>
-                        <p>Find high-quality services at every price point.</p>
+                        <p>Find high-quality services at every price.</p>
                     </li>
 
                     <li>
                         <h4>The best for every budget</h4>
-                        <p>Find high-quality services at every price point.</p>
+                        <p>Find high-quality services at every price.</p>
                     </li>
 
                     <li>
                         <h4>The best for every budget</h4>
-                        <p>Find high-quality services at every price point.</p>
+                        <p>Find high-quality services at every.</p>
                     </li>
 
                     <li>
                         <h4>The best for every budget</h4>
-                        <p>Find high-quality services at every price point.</p>
+                        <p>Find high-quality services at every price.</p>
                     </li>
                 </ul>
+                <img src="images/why-image.jpg" alt="Why MW" class="why-image">
             </div>
         </section>
 
-        <div class="discover-MW">
+        <section class="discover-MW">
             <h1>Discover Music World</h1>
-        </div>
+        </section>
 
         <section class="comments-section">
             <h1>What People Say</h1>
@@ -133,7 +141,9 @@
                     <h3>Tamara Bellis</h3>
                 </div>
             </div>
-        </section>
 
+            <img src="images/comments-image.jpg" alt="Comment Image" class="comments-image">
+        </section>
+    </div>
 </body>
 </html>
