Hero Class Modification

--- a/Home Page - Gigs Initial Page/index.html
+++ b/Home Page - Gigs Initial Page/index.html
@@ -4,27 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MusicWorld</title>
+    
+    <!-- Style Sheet -->
     <link rel="stylesheet" href="css/main.css">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=ABeeZee&family=Piedra&display=swap" rel="stylesheet">
+
+    <title>MusicWorld</title>
 </head>
 <body>
     <div class="container">
         <header>
             <div class="hero-class">
-                <a href="#" class="hero-title">Music World</a>
-                <img src="images/Music World Logo.svg" alt="MWLogo" class="hero-logo">
-            </div>
-            
-            <nav>
-                <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Become a Seller</a></li>
-                    <li><a href="#">Sign in</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
+                <div class="title">
+                    <a href="#" class="hero-title">Music World</a>
+                </div>
 
-            <img src="images/hero-image.jpg" alt="Backgorund Image" class="hero-image">
+                <div class="logo">
+                    <img src="images/Music World Logo.svg" alt="MWLogo" class="hero-logo">
+                </div>
+            </div>
+
+            <div class="navigation">
+                <nav>
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Become a Seller</a></li>
+                        <li><a href="#">Sign in</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <!--img src="images/hero-image.jpg" alt="Backgorund Image" class="hero-image"-->
         </header>
 
         <section class="sponsors">
