Making Web Page Responsive - Header and Sponsors Finished

--- a/Home Page - Gigs Initial Page/index.html
+++ b/Home Page - Gigs Initial Page/index.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=ABeeZee&family=Piedra&display=swap" rel="stylesheet">
 
+    <!-- Font Awesome Icons  -->
+    <script src="https://kit.fontawesome.com/62ea397d3a.js"></script>
+
     <title>MusicWorld</title>
 </head>
 <body>
@@ -28,17 +31,18 @@
                 </div>
             </div>
 
-            <div class="navigation">
-                <nav>
-                    <ul>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Become a Seller</a></li>
-                        <li><a href="#">Sign in</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </nav>
+            <div class="slide-menu">
+                <div class="fas fa-bars"></div>
             </div>
-            <!--img src="images/hero-image.jpg" alt="Backgorund Image" class="hero-image"-->
+
+            <nav>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Become a Seller</a></li>
+                    <li><a href="#">Sign in</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>  
         </header>
 
         <section class="sponsors">
@@ -50,13 +54,20 @@
 
         <section class="slide-categories">
             <div class="category-description">
-                <h1>Instrument Lessons</h1>
-                <h2>It is never too late to learn...</h2>
+                <div class="slide-titles">
+                    <h1>Instrument Lessons</h1>
+                    <h2>It is never too late to learn...</h2>
+                </div>
             </div>
             
             <div class="slide-icon">
-                <img src="images/slide-icon-right.svg" alt="Slide Left" class="slide-category-image-a">
-                <img src="images/slide-icon-right.svg" alt="Slide Right" class="slide-category-image-b">
+                <div class="slide-image-1">
+                    <img src="images/slide-icon-right.svg" alt="Slide Left" class="slide-category-image-a">
+                </div>
+                
+                <div class="slide-image-2">
+                    <img src="images/slide-icon-right.svg" alt="Slide Right" class="slide-category-image-b">
+                </div>
             </div>
 
             <div class="slide-ellipse">
@@ -68,7 +79,7 @@
                 <img src="images/ellipse-light.svg" alt="Ellipse Light">
             </div>
 
-            <img src="images/guitar-slide.jfif" alt="Slide Image" class="slide-category-image">
+            <!--img src="images/guitar-slide.jfif" alt="Slide Image" class="slide-category-image"-->
         </section>
 
         <section class="about-us">
