Home Page Responsive Finished

--- a/Home Page - Gigs Initial Page/index.html
+++ b/Home Page - Gigs Initial Page/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Style Sheet -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/index.css">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -163,8 +163,10 @@
         </section>
 
         <section class="comments-section">
-            <h1>What People Say</h1>
-
+            <div class="comments-title">
+                <h1>What People Say</h1>
+            </div>
+            
             <div class="people-comments">
                 <div class="comment">
                     <img src="images/profile-image-1.png" alt="Person 1">
@@ -172,13 +174,13 @@
                     <h3>Callie Morgam</h3>
                 </div>
 
-                <div class="comment">
+                <div class="comment" id="comment-2">
                     <img src="images/profile-image-2.png" alt="Person 2">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, earum.</p>
                     <h3>Nathan McBride</h3>
                 </div>
 
-                <div class="comment">
+                <div class="comment" id="comment-3">
                     <img src="images/profile-image-3.png" alt="Person 3">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, earum.</p>
                     <h3>Tamara Bellis</h3>
