--- a/Buy a Gig - Gigs Created - Gigs Purchased - Footer/gig.html
+++ b/Buy a Gig - Gigs Created - Gigs Purchased - Footer/gig.html
@@ -5,12 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 
+	<link rel="stylesheet" href="css/responsive.css">
 	<link rel="stylesheet" href="css/app.css">
 	<link rel="stylesheet" href="css/footer.css">
 	<link rel="stylesheet" href="css/gig.css">
 </head>
 <body>
-	<nav>
+	<nav style="display: none;">
 	    <div class="main-title-class">
 	        <a href="#" class="main-title">Music World</a>
 	        <img src="assets/Music World Logo Blue.svg" alt="MWLogo" class="main-logo">
@@ -53,7 +54,7 @@
 		<div style="width: 100%;">
 			<div class="gig-page">
 				<div class="display-flex">
-					<div class="width-50" style="margin-left: 10%;">
+					<div class="col-2-50" style="margin: 0 10%;">
 						<div class="margin">
 							<a href="#">Current category</a> <b>></b> <a href="#">Current gig</a>
 						</div>
@@ -62,7 +63,7 @@
 							<h2>I will make anime background music just for you</h4>
 						</div>
 
-						<div class="margin">
+						<div class="margin text-left">
 							<img src="assets/placeholder.jpg" alt="" style="width: 32px; height: 32px; border-radius: 20px;">
 							<div style="display: inline-block;vertical-align: top;margin: 8px;">Name of seller</div>
 						</div>
@@ -74,8 +75,7 @@
 						<div class="margin" id="description">
 							<h3>About This Gig</h3>
 							<br>
-							<p>
-								Please check out my portfolio for more music I've done!
+							<div>Please check out my portfolio for more music I've done!
 								<br>
 								https://soundcloud.com/lil_xiaolongbao
 								<br>
@@ -86,7 +86,7 @@
 								From Funimation to Steam indie games, I composed tracks for various styles and manners.
 								<br>
 								Mixed & mastered & ready to go for whatever reason you need I can also compose a track with your given melody
-							</p>
+							</div>
 						</div>
 
 						<div class="line margin"></div>
@@ -94,28 +94,27 @@
 						<div class="margin">
 							<div class="display-inline-block" style="margin-left: 20px; vertical-align: top;">
 								<h4>Genre</h4>
-								<p>Pop Cinematic</p>
+								<div>Pop Cinematic</div>
 							</div>
 
 							<div class="display-inline-block" style="margin-left: 40px; vertical-align: top;">
 								<h4>Purpose</h4>
-								<p>
+								<div>
 									Films & Videos
 									<br>
 									Video Games
-								</p>
+								</div>
 							</div>
 						</div>
 
-						<div class="margin" id="seller">
+						<div class="margin text-left" id="seller">
 							<h3>About the seller</h3>
 
-							<div class="display-inline-block margin" style="margin-left: 20px; vertical-align: top; width: 20%;">
-								<img src="assets/placeholder.jpg" alt="User image" style="width: 100%; height: auto;">
-							</div>
-
-							<div class="display-inline-block margin" style="margin-left: 40px; vertical-align: top;">
-								Username
+							<div class="margin text-left">
+								<img src="assets/placeholder.jpg" alt="" style="width: 32px; height: 32px; border-radius: 20px;">
+								<div class="display-inline-block margin" style="vertical-align: top; margin: 8px;">
+									Name of seller
+								</div>
 							</div>
 						</div>
 
@@ -144,7 +143,7 @@
 								<h3>Recommended for you</h4>
 							</div>
 
-							<div class="gig-item">
+							<div class="gig-item col-50">
 								<div>
 									<img src="assets/placeholder.jpg" alt="Gig image" style="width: 100%;">
 								</div>
@@ -164,7 +163,7 @@
 								</div>
 							</div>
 
-							<div class="gig-item">
+							<div class="gig-item col-50">
 								<div>
 									<img src="assets/placeholder.jpg" alt="Gig image" style="width: 100%;">
 								</div>
@@ -188,11 +187,8 @@
 						<div class="margin" id="faq">
 							<h3>FAQ</h3>
 							<br>
-							<p>
-								Can I use your music on my twitch stream?
-								<br>
-								Yes! You can check the 'commercial usage' option with an additional fee!
-							</p>
+							<div>Can I use your music on my twitch stream?</div>
+							<div>Yes! You can check the 'commercial usage' option with an additional fee!</div>
 						</div>
 
 						<div class="margin" id="reviews">
@@ -271,7 +267,7 @@
 			</div>
 		</div>
 
-		<div class="width-30 static-gig">
+		<div id="contact-form" class="col-2-30 contact-gig fixed-resp">
 			<div class="gig-contact-form">
 				<div class="">
 					<form action="url" method="post">
@@ -301,9 +297,9 @@
 			</div>
 		</div>
 
-		<div class="footer">
-			<div class="display-flex" style="margin-top: 25px;">
-				<div class="width-15" style="margin-left: 20%;">
+		<div id="footer" class="footer">
+			<div class="flexbox" style="margin-top: 25px;">
+				<div class="col-20 footer-offset">
 					<ul class="footer-list">
 						<li class="footer-list-item footer-list-header">Categories</li>
 						<a href="/category/1"><li class="footer-list-item">Instrument Lessons</li></a>
@@ -314,13 +310,13 @@
 						<a href="/category/6"><li class="footer-list-item">Beat Making</li></a>
 					</ul>
 				</div>
-				<div class="width-30">
+				<div class="col-20">
 					<div class="footer-logos" style="margin: auto;">
 						<a href="/"><img src="assets/logo.png" style="max-width: 200px;" alt="Music World - Logo"></a>
 						<a href="/"><img src="assets/logo-text.png" style="max-width: 200px;" alt="Music World - Logo text"></a>
 					</div>
 				</div>
-				<div class="width-15">
+				<div class="col-20 footer-offset-2">
 					<ul class="footer-list">
 						<li class="footer-list-item footer-list-header">About</li>
 						<a href="/#general-information"><li class="footer-list-item">General information</li></a>
@@ -332,17 +328,17 @@
 				</div>
 			</div>
 
-			<div class="display-flex" style="margin-top: 25px;">
-				<div class="width-50 display-flex">
-					<div class="footer-logo" style="max-width: fit-content;">
-						<a href="/"><<img src="assets/logo-text.png" style="max-width: 200px;" alt="Music World - Logo text"></a>
+			<div class="flexbox" style="margin-top: 25px;">
+				<div class="col-60 display-flex-resp">
+					<div class="footer-logo col-50" style="max-width: fit-content;">
+						<a href="/"><img src="assets/logo-text.png" style="max-width: 200px;" alt="Music World - Logo text"></a>
 					</div>
-					<div class="footer-rights" style="height: 100%; padding: 15px 5px;">
+					<div class="footer-rights col-50" style="height: 100%; padding: 15px 5px;">
 						Music World 2022 | All rights reserved
 					</div>
 				</div>
-				<div class="width-50">
-					<div class="float-right">
+				<div class="col-40">
+					<div class="float-right-resp">
 						<ul class="footer-inline-list">
 							<li class="footer-inline-list-item">
 								<a href="">
@@ -371,4 +367,5 @@
 		</div>
 	</div>
 </body>
+
 </html>
