--- a/Buy a Gig - Gigs Created - Gigs Purchased - Footer/my_gigs.html
+++ b/Buy a Gig - Gigs Created - Gigs Purchased - Footer/my_gigs.html
@@ -5,12 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 
+	<link rel="stylesheet" href="css/responsive.css">
 	<link rel="stylesheet" href="css/app.css">
 	<link rel="stylesheet" href="css/footer.css">
 	<link rel="stylesheet" href="css/my_gigs.css">
 </head>
 <body>
-	<nav>
+	<nav style="display: none;">
 	    <div class="main-title-class">
 	        <a href="#" class="main-title">Music World</a>
 	        <img src="assets/Music World Logo Blue.svg" alt="MWLogo" class="main-logo">
@@ -44,21 +45,24 @@
 				<h1>Gigs</h1>
 			</div>
 
-			<div class="margin tables-links">
-				<a href="#">Active</a>
-				<a href="#">Pending approval</a>
-				<a href="#">Requires modification</a>
-				<a href="#">Draft</a>
-				<a href="#">Denied</a>
-				<a href="#">Paused</a>
-				<a href="#" class="create-gig">Create new gig</a>
+			<div class="margin tables-links" style="margin: 40px 0;">
+				<a href="#" class="table-link">Active</a>
+				<a href="#" class="table-link">Pending approval</a>
+				<a href="#" class="table-link">Requires modification</a>
+				<a href="#" class="table-link">Draft</a>
+				<a href="#" class="table-link">Denied</a>
+				<a href="#" class="table-link">Paused</a>
+				<div class="float-right-resp" style="padding: 10px;">
+					<a href="#" class="create-gig">Create new gig</a>
+				</div>
 			</div>
 
-			<div class="margin">
+			<div class="margin responsive-table">
 				<table class="gigs-table">
 					<thead>
 						<tr>
 							<th>Gig</th>
+							<th></th>
 							<th>Impressions</th>
 							<th>Clicks</th>
 							<th>Orders</th>
@@ -68,10 +72,10 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td style="display: flex;">
-								<img src="assets/placeholder.png" alt="Gig image" style="width: 10%;">
-								<div style="margin: 15px; display: inline-block;">I will give you a piano lesson</div>
+							<td class="table-image-wrapper">
+								<img src="assets/placeholder.png" alt="Gig image" class="table-image">
 							</td>
+							<td>I will give you a piano lesson</td>
 							<td>164</td>
 							<td>5</td>
 							<td>0</td>
@@ -84,9 +88,9 @@
 
 		</div>
 
-		<div class="footer">
-			<div class="display-flex" style="margin-top: 25px;">
-				<div class="width-15" style="margin-left: 20%;">
+		<div id="footer" class="footer">
+			<div class="flexbox" style="margin-top: 25px;">
+				<div class="col-20 footer-offset">
 					<ul class="footer-list">
 						<li class="footer-list-item footer-list-header">Categories</li>
 						<a href="/category/1"><li class="footer-list-item">Instrument Lessons</li></a>
@@ -97,13 +101,13 @@
 						<a href="/category/6"><li class="footer-list-item">Beat Making</li></a>
 					</ul>
 				</div>
-				<div class="width-30">
+				<div class="col-20">
 					<div class="footer-logos" style="margin: auto;">
 						<a href="/"><img src="assets/logo.png" style="max-width: 200px;" alt="Music World - Logo"></a>
 						<a href="/"><img src="assets/logo-text.png" style="max-width: 200px;" alt="Music World - Logo text"></a>
 					</div>
 				</div>
-				<div class="width-15">
+				<div class="col-20 footer-offset-2">
 					<ul class="footer-list">
 						<li class="footer-list-item footer-list-header">About</li>
 						<a href="/#general-information"><li class="footer-list-item">General information</li></a>
@@ -115,17 +119,17 @@
 				</div>
 			</div>
 
-			<div class="display-flex" style="margin-top: 25px;">
-				<div class="width-50 display-flex">
-					<div class="footer-logo" style="max-width: fit-content;">
-						<a href="/"><<img src="assets/logo-text.png" style="max-width: 200px;" alt="Music World - Logo text"></a>
+			<div class="flexbox" style="margin-top: 25px;">
+				<div class="col-60 display-flex-resp">
+					<div class="footer-logo col-50" style="max-width: fit-content;">
+						<a href="/"><img src="assets/logo-text.png" style="max-width: 200px;" alt="Music World - Logo text"></a>
 					</div>
-					<div class="footer-rights" style="height: 100%; padding: 15px 5px;">
+					<div class="footer-rights col-50" style="height: 100%; padding: 15px 5px;">
 						Music World 2022 | All rights reserved
 					</div>
 				</div>
-				<div class="width-50">
-					<div class="float-right">
+				<div class="col-40">
+					<div class="float-right-resp">
 						<ul class="footer-inline-list">
 							<li class="footer-inline-list-item">
 								<a href="">
