Index and AllGigs Responsive Finished

--- a/Home Page - Gigs Initial Page/allGigs.html
+++ b/Home Page - Gigs Initial Page/allGigs.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AllGigs</title>
     <link rel="stylesheet" href="css/allGigs.css">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=ABeeZee&family=Piedra&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome Icons  -->
+    <script src="https://kit.fontawesome.com/62ea397d3a.js"></script>
 </head>
 <body>
     <div class="container">
@@ -35,15 +43,21 @@
             <div class="nav-user-logo">
                 <img src="images/user-icon.png" alt="User Icon" class="user-icon">
             </div>
+
+            <div class="slide-menu">
+                <div class="fas fa-bars"></div>
+            </div>
         </nav>
 
         <div class="categories">
-            <a href="#">Instrument Lessons</a>
-            <a href="#">Music Production</a>
-            <a href="#">Music Transcription</a>
-            <a href="#">Musical Video</a>
-            <a href="#">DJ Mixing</a>
-            <a href="#">Beat Making</a>
+            <div class="categories-div">
+                <a href="#">Instrument Lessons</a>
+                <a href="#">Music Production</a>
+                <a href="#">Music Transcription</a>
+                <a href="#">Musical Video</a>
+                <a href="#">DJ Mixing</a>
+                <a href="#">Beat Making</a>
+            </div>
         </div>
 
         <section class="main-container">
